# Dostup_bot

./: .gitignore  BOT_MULTIPLE_INSTANCES.md  CLOUD_RUN_AUDIT_LOGS.md  CLOUD_RUN_COMMANDS_REFERENCE.md  CLOUD_RUN_ERROR_ANALYSIS.md  CLOUD_RUN_IMAGE_NOT_FOUND.md  DETAILED_STRIPE_SETUP.md  DIGITALOCEAN_DEPLOY.md  Dockerfile  Dockerfile.debug  FINAL_RENDER_SOLUTION.md  GOOGLE_CLOUD_RUN_DEPLOY.md  POWERSHELL_DEPLOY_COMMANDS.md  QUICKSTART.md  RAILWAY_DEPLOY.md  README.md  REDIS_SETUP.md  REMINDER_SETUP.md  RENDER_DEPLOY.md  RENDER_DEPLOY_FIX.md  RENDER_DOCKER_DEPLOY.md  RENDER_EMERGENCY_FIX.md  RENDER_FIX_URGENT.md  RENDER_TROUBLESHOOTING.md  SETUP.md  STRIPE_SETUP.md  TELEGRAM_BOT_TOKEN_TROUBLESHOOTING.md  TOKEN_SETUP.md  TROUBLESHOOTING_DOSTUP_BOT_JUNE2025.md  bot.py  bot.py.backup  bot_v2.py  check_imports.py  cloud_run_adapter.py  debug_cloud_run.py  debug_imports.py  docker-compose.yml  environment.yml  fix_imports.py  fix_indentation.py  (+13 more)
.render/: build.sh  run.sh
documents/: README.md  agb.txt  datenschutz.txt  widerruf.txt
