[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dostup-bot"
version = "0.1.0"
description = "Telegram Bot for Dostup Course"
readme = "README.md"
requires-python = ">=3.11, <3.12"
license = {text = "Proprietary"}
authors = [
    {name = "Alexander Cherkasky"}
]
dependencies = [
    "aiogram==2.25.1",
    "python-dotenv==1.0.0",
    "openai>=1.3.0",
    "stripe>=5.0.0",
    "aiohttp==3.8.5",
]

[tool.setuptools]
packages = ["app"]
